syntax = "proto3";

message GenerateTokenRequest {
  string user_id = 1;
}

message Tokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message Token {
  string token = 1;
}

message ValidationResponse {
  bool is_valid = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (Tokens);
  rpc Register(RegisterRequest) returns (Tokens);
  rpc ValidateToken(Token) returns (ValidationResponse);
  rpc RefreshToken(Token) returns (Tokens);
}
